--- a/3/index.html
+++ b/3/index.html
@@ -247,9 +247,9 @@
          funkcji $i \mapsto A[i]$ dla $i \in \{ 0..n - 1\}$ jest funkcją liniową). Podobnie jak algorytm przeszukiwania
          binarnego, szuka on danej wartości na pewnej podtablicy $[l, r]$ i wybiera wyraz wewnątrz tej podtablicy, lecz
          nie środkowy, a przewidywany zależnie od rozkładu danych w $A$ tak, by był on według tego rozkładu jak najbliżej
-         szukanego wyrazu. Dla rozkładu danych jednostajnie liniowego, będzie to wyraz o indeksie
-         $m = l + \left\lfloor \frac{(k - A[l]) \cdot (r - l)}{A[r] - A[l]} \right\rfloor$ (o ile $A[r] \neq A[l]$, w takim
-         przypadku algorytm kończy się porównaniem $A[l]$ z $k$). Podobnie jak w przeszukiwaniu
+         szukanego wyrazu. Dla rozkładu danych jednostajnie liniowego, dla $A[l] \leq k \leq A[r]$ będzie to wyraz o indeksie
+         $m = l + \left\lfloor \frac{(k - A[l]) \cdot (r - l)}{A[r] - A[l]} \right\rfloor$ (o ile $A[r] \neq A[l]$, w
+         przeciwnym przypadku algorytm kończy się porównaniem $A[l]$ z $k$). Podobnie jak w przeszukiwaniu
          binarnym, jeżeli wyznaczony wyraz jest mniejszy niż szukana wartość, to szukany wyraz może znajdować się tylko w
          podtablicy $[m + 1, r]$, gdyż $A$ jest posortowana, jeżeli jest on większy niż szukany wyraz, to szukany wyraz
          może znajdować się tylko w podtablicy $[l, m - 1]$, a jeżeli doszło do sytuacji, w której algorytm szuka w podtablicy
@@ -262,7 +262,7 @@
             \begin{algorithmic}
             \FUNCTION{interpolationsearch}{$A, k$}
                \STATE $l \gets 0, r \gets A\text{.length} - 1$
-               \WHILE{$l \leq r$}
+               \WHILE{$l \leq r \land A[l] \leq k \land k \leq A[r]$}
                   \IF{$A[r] = A[l]$}
                      \IF{$A[l] = k$}
                         \RETURN $l$
@@ -305,7 +305,7 @@
 
             let ii = 0;
 
-            while (l <= r) {
+            while (l <= r && parseInt(A[l], 10) <= k && k <= parseInt(A[r], 10)) {
                if (parseInt(A[r], 10) === parseInt(A[l], 10)) {
                   if (parseInt(A[l], 10) === k) {
                      return l;
@@ -393,33 +393,48 @@
       </p>
 
       <div class="code">
-         <div style="position: absolute; display: block"><a href="https://tio.run/##fVLBboJAEL37Fe9klhZsvXixNOHYs0fjYatbRWYXsqw2jeHb6SwQLKjdkLAzb97svMk7yrOM8kKZ4y6r6y3JssSHccoWOUmX5malpN0ecJkAKB2ntkiNu1cjOL/eIAmbgixoOXx8SIjxGsLyL5mRMnt3QIR5CL2cdGXfh5QUBOEt5rrpFMmaNj7IfJD5W7K2m2tf3/oLwicRx035AOxxavBsDPKxyp2sAS0HQDWIFJXqITOaP6RWk@tds27CM0TGqttBnyAsBxTgpdPQIcvxU2O5mrdyq8ZvWPMTfwf6M02joue/3/Jtw4/@5Y8Y7Qr0HUKvfbimNl2cPolt1LnpnKc7aJkasXI2NXu2kLT7cmAfbyse77IIMf6q3j@rn9IpPctPblZwI0dG3HMp@3MRBN04VV3/Ag">
+         <div style="position: absolute; display: block"><a href="https://tio.run/##tVRNb4MwDL3zK7xLBRt066UXxiSOO/dYccjarKWYgELaaar47cymERsUVmnSIiTir5dnO85BnERQlFIdtlnTbFBUFbwqI3VZoDBpoVZS6M0ezg4AVIZUG0iVGfNxSb9OIPZbh8y7xNBiESGCJx80/eI5SrUzewhg4UPOhtCxrh/7FCW4CM8R@c5mEK8xYSFjIeNdvNbJNzbDv3NARAE9tbW0AHfRTz7d0tIctYJgEfYsdU@SWMnJUJyMrB1nwEO3PJjPkArXAOEB3IxqcnG4B1eTgB482lhrCYdMRjLOqWSjCXMXcjrodsId0Mt45VqgAP5QOYvMLBLu2hj8NNWrQ64IT0PanuU3EHtN/C2Z/79eOrzFrLtm/cMu6vL4hjSvdmxPRbqFXKTKXRmdqh3NqtC7qjenPL9U@PPSh@FXd0O6@qyMzOfF0cxLAjKo3LHngB6CpedZOnXTfAE">
             Try it online!</a></div>
          <pre style="display:block"><code>
 class InterpolationSearch {
    static int InterpolationSearch(int[] A, int k) {
-      int l = 0, r = A.length - 1, m;
+      int l = 0, r = A.length - 1, m = 0;
 
       while (l <= r && A[l] <= k && k <= A[r]) {
-         if (A[r] == A[l]) {
-            if (A[l] == k) {
-               return l;
+         if (l == r) {
+            if (A[l] != k) {
+               return -1;
             }
             else {
-               return -1;
+               return l;
             }
          }
 
-         m = l + (k - A[l]) * (r - l) / (A[r] - A[l]);
+         if (A[r] != A[l]) {
+            m = l + (k - A[l]) * (r - l) / (A[r] - A[l]);
                
-         if (A[m] < k) {
-            l = m + 1;
-         }
-         else if (A[m] > k) {
-            r = m - 1;
+            if (A[m] < k) {
+               l = m + 1;
+            }
+            else if (A[m] > k) {
+               r = m - 1;
+            }
+            else {
+               if (A[m + 1] == k) {
+                  l = m + 1;
+               }
+               else if (A[m] == k) {
+                  return m;
+               }
+            }
          }
          else {
-            return m;
+            if (A[l] != k) {
+               return -1;
+            }
+            else {
+               return r;
+            }
          }
       }
 
