--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </style>
 </head>
 <body>
-   <span>Zadania z Metod Programowania:/span>
+   <span>Zadania z Metod Programowania:</span>
    <ul>
       <li><a href="./mp/3.html">Zadanie 3</a>
       <li><a href="./mp/4.html">Zadanie 4</a>
